add swag comment for tasks routes
